# gamma-agents

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py  settings.py
app/routers/: analyze_stock.py
app/schemas/: analyze.py
app/services/: analyze_stock.py
notebooks/: playground.ipynb
