[project]
name = "gamma-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.12",
    "fpdf>=1.7.2",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-groq>=0.3.1",
    "langgraph==0.3.14",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy==1.26.4",
    "pip>=25.0.1",
    "pmdarima>=2.0.4",
    "python-decouple>=3.8",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "wikipedia>=1.4.0",
    "yahooquery>=2.3.7",
    "yfinance>=0.2.55",
]
